# ansible-collection-misc

./: .gitignore  LICENSE  README.md  build.py  importer_result.json  pyproject.toml
nodeto/misc/: README.md  galaxy.yml
nodeto/misc/plugins/modules/: nix.py
nodeto/misc/plugins/modules/docs/nix/: documentation.yml  examples.yml
nodeto/misc/roles/nix/: README.md
nodeto/misc/roles/nix/files/: nix.sh
nodeto/misc/roles/nix/meta/: argument_specs.yml  main.yml
nodeto/misc/roles/nix/tasks/: main.yml  user_steps.yml
nodeto/misc/roles/package_facts/: README.md
nodeto/misc/roles/package_facts/defaults/: main.yml
nodeto/misc/roles/package_facts/meta/: main.yml
nodeto/misc/roles/package_facts/tasks/: main.yml  packages.yml
