[tool.poetry]
name = "ansible-collection-misc"
version = "0.1.0"
description = "Collection of miscellaneous roles"
authors = ["Kevin Joyce"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
