[tool.poetry]
name = "ansible-collection-misc"
version = "0.1.0"
description = "Collection of miscellaneous roles"
authors = ["Kevin Joyce"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.12.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
bandit = "^1.7.2"
flake8 = "^3.9"
mypy = "^0.931"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
galaxy-importer = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
